Substituted <br> with margin

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
           </div>
         </div>
         <!--Lunar Birthdays-->
-        <div class="row text-left align-items-center">
+        <div class="row project text-left align-items-center">
           <div class="col-xs-12 col-lg-6">
             <img
               class="img-fluid proj-img"
@@ -416,10 +416,8 @@
             </button>
           </div>
         </div>
-        <br />
-        <br />
         <!--Claimbot-->
-        <div class="row text-left align-items-center">
+        <div class="row project text-left align-items-center">
           <div class="col-xs-12 col-lg-6 proj-img">
             <img class="img-fluid" src="assets/images/claimbot.jpg" alt="" />
           </div>
@@ -446,10 +444,8 @@
             </button>
           </div>
         </div>
-        <br />
-        <br />
         <!--Order Up-->
-        <div class="row text-left align-items-center">
+        <div class="row project text-left align-items-center">
           <div class="col-xs-12 col-lg-6 proj-img">
             <img class="img-fluid" src="assets/images/orderup.jpg" alt="" />
           </div>
@@ -474,10 +470,8 @@
             </button>
           </div>
         </div>
-        <br />
-        <br />
         <!--Timesheet-->
-        <div class="row text-left align-items-center">
+        <div class="row project text-left align-items-center">
           <div class="col-xs-12 col-lg-6 proj-img">
             <img class="img-fluid" src="assets/images/timesheet.jpg" alt="" />
           </div>
@@ -502,8 +496,6 @@
             </button>
           </div>
         </div>
-        <br />
-        <br />
         <div class="row text-center">
           <div class="col">
             <button id="see-more-btn" class="btn" onclick="toggleProjects()">See More Projects</button>
@@ -511,7 +503,7 @@
         </div>
         <div id="hidden-projects" style="display: none;">
           <!--Loot Council-->
-          <div class="row text-left align-items-center">
+          <div class="row project text-left align-items-center">
             <div class="col-xs-12 col-lg-6 proj-img">
               <img class="img-fluid" src="assets/images/lootcouncil.jpg" alt="" />
             </div>
@@ -536,10 +528,8 @@
               </button>
             </div>
           </div>
-          <br />
-          <br />
           <!--Restaurant POS-->
-          <div class="row text-left align-items-center">
+          <div class="row project text-left align-items-center">
             <div class="col-xs-12 col-lg-6 proj-img">
               <img class="img-fluid" src="assets/images/newgarden.jpg" alt="" />
             </div>
@@ -564,10 +554,8 @@
               </button>
             </div>
           </div>
-          <br />
-          <br />
           <!--Romantic Hut-->
-          <div class="row text-left align-items-center">
+          <div class="row project text-left align-items-center">
             <div class="col-xs-12 col-lg-6 proj-img">
               <img class="img-fluid" src="assets/images/romantichut.jpg" alt="" />
             </div>
