--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
                     - Reduced the administration team’s workload by 45 hours every month by utilizing Python Xlwings to automate
                     the creation and printing of 500 individualized Excel timesheets
                     <br /><br />
-                    - Developed a full-stack web application using Node.js, Express, and Google Sheets API, enabling 
-                    self-service food ordering for 200 clients and saving the kitchen staff 30 minutes daily                               
+                    - Developed and deployed a full-stack web application to Vercel using Node.js, Express, and Google Sheets API, 
+                    enabling self-service food ordering for 200 clients and saving the kitchen staff 30 minutes daily                               
                     <br /><br />
                     - Reduced tour availability inquiries by 10% with Apps Script triggered by Google Form submissions that
                     cross-reference reservation dates in Sheets and send an automated reply through Twilio SMS
