--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     - Retrieved regional population density data of 300k via Socrata API, pre-processed with Pandas, and applied
                     k-means clustering to identify mobile vaccination clinic locations
                     <br /><br />
-                    - Leveraged Anadonda’s debugger and virtual
+                    - Leveraged Anaconda’s debugger and virtual
                     environment to resolve 2 legacy codebases with outdated
                     libraries 
                     <br /><br />
