Updated project video link

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
             >
               GitHub
             </button>
-            <button class="btn play-video" data-video-id="jfPqaO7GtPs">
+            <button class="btn play-video" data-video-id="j7rcgPCSdx0">
               Demo
             </button>
           </div>
