updated order up demo

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
             >
               GitHub
             </button>
-            <button class="btn play-video" data-video-id="j7rcgPCSdx0">
+            <button class="btn play-video" data-video-id="7OSRugRqBtQ">
               Demo
             </button>
           </div>
