--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
                     - Achieved 90% efficiency gains in insurance claim submissions for 500 patients biweekly, saving the billing
                     department 85 hours per cycle by employing Python Selenium and Pandas for patient data mapping                    
                     <br /><br />
-                    - Reduced the administration team’s workload by 45 hours every month by utilizing Python Xlwings to automate
-                    the creation and printing of 500 individualized Excel timesheets
+                    - Increased the administration team’s productivity by 28% through workload reduction by utilizing Python Xlwings
+                     to automate the creation and printing of 500 individualized Excel timesheets
                     <br /><br />
                     - Developed and deployed a full-stack web application to Vercel using Node.js, Express, and Google Sheets API, 
                     enabling self-service food ordering for 200 clients and saving the kitchen staff 30 minutes daily                               
