--- a/index.html
+++ b/index.html
@@ -612,8 +612,7 @@
             <h4>Check out my resume!</h4>
             <button
               class="btn"
-              onclick=" window.open('assets/johnnyjiang-resume.pdf')"
-            >
+              onclick=" window.open('https://drive.google.com/file/d/1OAcTNh21Nt7oMEGyMYLSJUUTh2IDUONv/view?usp=sharing')">
               Resume
             </button>
             <p>(More detail for each experience)</p>
