--- a/index.html
+++ b/index.html
@@ -229,17 +229,10 @@
                     <em>Software Engineer</em>
                   </h4>
                   <p>
-                    - Achieved 90% efficiency gains in insurance claim submissions for 500 patients biweekly, saving the billing
-                    department 85 hours per cycle by employing Python Selenium and Pandas for patient data mapping                    
-                    <br /><br />
-                    - Increased the administration team’s productivity by 28% through workload reduction by utilizing Python Xlwings
-                     to automate the creation and printing of 500 individualized Excel timesheets
-                    <br /><br />
-                    - Developed and deployed a full-stack web application to Vercel using Node.js, Express, and Google Sheets API, 
-                    enabling self-service food ordering for 200 clients and saving the kitchen staff 30 minutes daily                               
-                    <br /><br />
-                    - Reduced tour availability inquiries by 10% with Apps Script triggered by Google Form submissions that
-                    cross-reference reservation dates in Sheets and send an automated reply through Twilio SMS
+                    Saved the company over 1,000 cumulative hours of workload by 
+                    utilizing Python to develop tailored automation tools across various departments. 
+                    The most significant included automating hundreds of insurance claim submissions 
+                    with Selenium and generating individualized Excel workbooks using Xlwings.
                   </p>
                 </div>
               </li>
@@ -255,16 +248,9 @@
                     <em>Software Engineer Intern</em>
                   </h4>
                   <p>
-                    - Retrieved regional population density data of 300k via Socrata API, pre-processed with Pandas, and applied
-                    k-means clustering to identify mobile vaccination clinic locations
-                    <br /><br />
-                    - Leveraged Anaconda’s debugger and virtual
-                    environment to resolve 2 legacy codebases with outdated
-                    libraries 
-                    <br /><br />
-                    - Employed OpenAI API to generate training
-                    data of block descriptions containing up to 3 features per
-                    sentence
+                    An AI / ML focused role where I worked with Explainable AI, 
+                    the What-If-Tool, OpenAI API, and k-means clustering. Also
+                    spent time debugging legacy codebases.
                   </p>
                   <br />
                   <img
@@ -291,13 +277,7 @@
                 <div class="exp-card">
                   <h4><strong>The Pennsylvania State University</strong></h4>
                   <p>
-                    - Bachelor of Science in Computer Science 
-                    <br /><br />
-                    - 2019 Hackathon JPMorgan Sponsored Challenge Winner (900+
-                    participants) 
-                    <br /><br />
-                    - Leonhard Center Speaking Contest
-                    semi-finalist (Top 3%)
+                    Bachelor of Science in Computer Science
                   </p>
                   <br />
                   <img class="img-fluid" src="assets/images/grad.jpg" alt="" />
@@ -608,7 +588,7 @@
           </div>
         </div>
         <div class="row text-center align-items-top">
-          <div class="col-xs-12 col-lg-6 resume">
+          <div class="col-xs-12 col-lg-6  resume">
             <h4>Check out my resume!</h4>
             <button
               class="btn"
