Prevent breaks at hyphenated words

--- a/index.html
+++ b/index.html
@@ -171,21 +171,21 @@
             </p>
             <p>
               <strong>Capabilities:</strong>
-              <br />- Eat countless packets of Mi Goreng instant noodles <br />-
-              Carry any amount of groceries in a single trip <br />- Speedrun
-              any task with Mario Kart Star Music 10 hours
+              <br />- Eat countless packets of Mi Goreng instant noodles 
+              <br />- Carry any amount of groceries in a single trip 
+              <br />- Speedrun any task with Mario Kart Star Music 10 hours
             </p>
             <p>
               <strong>Accomplishments:</strong>
-              <br />- Survived two separate graduations in pouring rain <br />-
-              Crowned the Four Square King in elementary school <br />- Worked
-              as an Assistant (to the) Manager of a restaurant
+              <br />- Survived two separate graduations in pouring rain 
+              <br />- Crowned the Four Square King in elementary school 
+              <br />- Worked as an Assistant (to the) Manager of a restaurant
             </p>
             <p>
               <strong>Misdemeanors:</strong>
-              <br />- Enjoys chewing bubble gum but can't blow bubbles <br />-
-              Claims to be trilingual but still uses translate apps <br />- Has
-              a confusing one-word, all-lowercase WiFi password
+              <br />- Enjoys chewing bubble gum but can't blow bubbles 
+              <br />- Claims to be trilingual but still uses translate apps 
+              <br />- Has a confusing <span class="nowrap">one-word,</span> <span class="nowrap">all-lowercase</span> WiFi password
             </p>
           </div>
         </div>
@@ -203,8 +203,8 @@
             <p>
               I've gained experience within established corporations and led
               multiple teams on various academic projects. These opportunities
-              have given me a well-rounded perspective on addressing complex
-              problems using data-driven techniques.
+              have given me a <span class="nowrap">well-rounded</span> perspective on addressing complex
+              problems using <span class="nowrap">data-driven</span> techniques.
             </p>
           </div>
         </div>
@@ -248,9 +248,9 @@
                     <em>Software Engineer Intern</em>
                   </h4>
                   <p>
-                    An AI / ML focused role where I worked with Explainable AI, 
-                    the What-If-Tool, OpenAI API, and k-means clustering. Also
-                    spent time debugging legacy codebases.
+                    An AI / ML focused role where I worked with Explainable AI, the 
+                    <span class="nowrap">What-If-Tool,</span> OpenAI API, and 
+                    <span class="nowrap">k-means</span> clustering. Also spent time debugging legacy codebases.
                   </p>
                   <br />
                   <img
@@ -293,8 +293,8 @@
                   </h4>
                   <p>
                     Led a team of 5 in organizing biweekly workshops about GCP
-                    products. Also provided year-long mentorship to members
-                    participating in the Google Solutions Challenge.
+                    products. Also provided <span class="nowrap">year-long</span> 
+                    mentorship to members participating in the Google Solutions Challenge.
                   </p>
                   <br />
                   <img class="img-fluid" src="assets/images/gdsc.jpg" alt="" />
@@ -309,9 +309,8 @@
                     <em>Head Mentor</em>
                   </h4>
                   <p>
-                    Provided mentorship to 8 first-year engineering students per
-                    semester. Also contributed to the orientation events and
-                    material
+                    Provided mentorship to 8 <span class="nowrap">first-year</span> engineering 
+                    students per semester. Also contributed to the orientation events and material.
                   </p>
                   <br />
                   <img class="img-fluid" src="assets/images/.jpg" alt="" />
@@ -352,9 +351,9 @@
             <p>
               Here are the projects I've developed, each inspired by the motto
               "See a need, fill a need." I've pursued these journeys through
-              self-directed learning, with a focus on creating solutions that
-              make a tangible impact. I'm always working on a new project - stay
-              tuned for more!
+              <span class="nowrap">self-directed</span> learning, with a focus on 
+              creating solutions that make a tangible impact. I'm always working 
+              on a new project - stay tuned for more!
             </p>
             <br />
           </div>
@@ -374,7 +373,7 @@
             <p>
               Created a SwiftUI iOS app to save birthday profiles in core data
               and count down until the next. It will notify users of upcoming
-              birthdays. The main idea is to help ABC's (American-born Chinese)
+              birthdays. The main idea is to help ABC's (<span class="nowrap">American-born</span> Chinese)
               to help remember their family's birthdays since Lunar birthdays
               are never on the same day on Gregorian calendars.
             </p>
@@ -436,8 +435,8 @@
               Developed a full-stack web application with Node.js enables remote food ordering 
               for social adult day cares, allowing kitchen staff to set daily menus 
               and track orders effortlessly. It features self-ordering capabilities with 
-              schedule-aware menus managed by the staff. It saves the kitchen staff 30 minutes 
-              each day from manually asking every individual for their meal preference.
+              <span class="nowrap">schedule-aware</span> menus managed by the staff. It saves the 
+              kitchen staff 30 minutes each day from manually asking every individual for their meal preference.
             </p>
             <button
               class="btn"
@@ -462,8 +461,8 @@
               Developed a Python script with a GUI to automate the timesheet
               creation process. For the start of every new month, over 500
               unique timesheets are neededed. Achieved 45 hours of monthly
-              time-savings by constructing this script. Timesheets are curated
-              based on service days, month, and year.
+              <span class="nowrap">time-savings</span> by constructing this script. 
+              Timesheets are curated based on service days, month, and year.
             </p>
             <button
               class="btn"
