Updated with new project, Order Up 2

--- a/index.html
+++ b/index.html
@@ -423,28 +423,29 @@
             </button>
           </div>
         </div>
-        <!--Order Up-->
+        <!--Order Up 2-->
         <div class="row project text-left align-items-center">
           <div class="col-xs-12 col-lg-6 proj-img">
-            <img class="img-fluid" src="assets/images/orderup.jpg" alt="" />
+            <img class="img-fluid" src="assets/images/orderup2.jpg" alt="" />
           </div>
           <div class="col-xs-12 col-lg-6">
-            <div class="proj-title">Order Up</div>
-            <div class="proj-desc">Remote Food Ordering</div>
+            <div class="proj-title">Order Up 2</div>
+            <div class="proj-desc">Kitchen Order Management</div>
             <p>
               Developed a full-stack web application with Node.js enables remote food ordering 
               for social adult day cares, allowing kitchen staff to set daily menus 
               and track orders effortlessly. It features self-ordering capabilities with 
               <span class="nowrap">schedule-aware</span> menus managed by the staff. It saves the 
               kitchen staff 30 minutes each day from manually asking every individual for their meal preference.
+              This version utilizes PostgreSQL to save menu, member, and order data.
             </p>
             <button
               class="btn"
-              onclick=" window.open('https://github.com/johnnyj2608/OrderUp','_blank')"
+              onclick=" window.open('https://github.com/johnnyj2608/OrderUp2','_blank')"
             >
               GitHub
             </button>
-            <button class="btn play-video" data-video-id="7OSRugRqBtQ">
+            <button class="btn play-video" data-video-id="QUNo5Ob8d3M">
               Demo
             </button>
           </div>
@@ -481,6 +482,32 @@
           </div>
         </div>
         <div id="hidden-projects" style="display: none;">
+          <!--Order Up-->
+          <div class="row project text-left align-items-center">
+            <div class="col-xs-12 col-lg-6 proj-img">
+              <img class="img-fluid" src="assets/images/orderup.jpg" alt="" />
+            </div>
+            <div class="col-xs-12 col-lg-6">
+              <div class="proj-title">Order Up (Old)</div>
+              <div class="proj-desc">Remote Food Ordering</div>
+              <p>
+                Developed a full-stack web application with Node.js enables remote food ordering 
+                for social adult day cares, allowing kitchen staff to set daily menus 
+                and track orders effortlessly. It features self-ordering capabilities with 
+                <span class="nowrap">schedule-aware</span> menus managed by the staff. It saves the 
+                kitchen staff 30 minutes each day from manually asking every individual for their meal preference.
+              </p>
+              <button
+                class="btn"
+                onclick=" window.open('https://github.com/johnnyj2608/OrderUp','_blank')"
+              >
+                GitHub
+              </button>
+              <button class="btn play-video" data-video-id="7OSRugRqBtQ">
+                Demo
+              </button>
+            </div>
+          </div>
           <!--Loot Council-->
           <div class="row project text-left align-items-center">
             <div class="col-xs-12 col-lg-6 proj-img">
