--- a/index.html
+++ b/index.html
@@ -171,20 +171,20 @@
             </p>
             <p>
               <strong>Capabilities:</strong>
-              <br />- Eat countless packets of Mi Goreng instant noodles 
-              <br />- Carry any amount of groceries in a single trip 
+              <br />- Cook yummy meals without needing to measure ingredients
+              <br />- Carry any amount of groceries bags in a single trip 
               <br />- Speedrun any task with Mario Kart Star Music 10 hours
             </p>
             <p>
               <strong>Accomplishments:</strong>
               <br />- Survived two separate graduations in pouring rain 
               <br />- Crowned the Four Square King in elementary school 
-              <br />- Worked as an Assistant (to the) Manager of a restaurant
+              <br />- Defeated 6th grade teacher in a typing contest for a milkshake
             </p>
             <p>
               <strong>Misdemeanors:</strong>
               <br />- Enjoys chewing bubble gum but can't blow bubbles 
-              <br />- Claims to be trilingual but still uses translate apps 
+              <br />- Calls the action of turning off a light as "close the light"
               <br />- Has a confusing <span class="nowrap">one-word,</span> <span class="nowrap">all-lowercase</span> WiFi password
             </p>
           </div>
@@ -254,7 +254,7 @@
                   </p>
                   <br />
                   <img
-                    class="img-fluid"
+                    class="img-fluid w-100"
                     src="assets/images/siemens.jpg"
                     alt=""
                   />
@@ -277,64 +277,34 @@
                 <div class="exp-card">
                   <h4><strong>The Pennsylvania State University</strong></h4>
                   <p>
-                    Bachelor of Science in Computer Science
+                    - Bachelor of Science in Computer Science
+                    <br />- Google Developer Student Club | Technical Lead
+                    <br />- Engineering Orientation Network | Head Mentor
+                    <br />- Penn State Competitive Sports | Supervisor
                   </p>
                   <br />
-                  <img class="img-fluid" src="assets/images/grad.jpg" alt="" />
+                  <img class="img-fluid w-100" src="assets/images/psu.jpg" alt="" />
                 </div>
               </li>
-              <!--GDSC-->
+              <!--Penn State-->
               <li>
+                <time class="exp-date"
+                  ><span><b>Aug '14 - May '18</b></span></time
+                >
                 <div class="exp-icon"></div>
                 <div class="exp-card">
-                  <h4>
-                    <strong>Google Developer Student Club</strong> |
-                    <em>Technical Lead</em>
-                  </h4>
+                  <h4><strong>Juniata High School</strong></h4>
                   <p>
-                    Led a team of 5 in organizing biweekly workshops about GCP
-                    products. Also provided <span class="nowrap">year-long</span> 
-                    mentorship to members participating in the Google Solutions Challenge.
+                    - High School Diploma
+                    <br />- Volunteered as class videographer
+                    <br />- Played on the basketball and pole vault team
+                    <br />- Played in marching & concert band on the snare drum
+                    <br />- Acted in musical as a priest, turtle, captain, and alligator
                   </p>
                   <br />
-                  <img class="img-fluid" src="assets/images/gdsc.jpg" alt="" />
+                  <img class="img-fluid w-100" src="assets/images/jhs.jpg" alt="" />
                 </div>
               </li>
-              <!--EON-->
-              <li>
-                <div class="exp-icon"></div>
-                <div class="exp-card">
-                  <h4>
-                    <strong>Engineering Orientation Network</strong> |
-                    <em>Head Mentor</em>
-                  </h4>
-                  <p>
-                    Provided mentorship to 8 <span class="nowrap">first-year</span> engineering 
-                    students per semester. Also contributed to the orientation events and material.
-                  </p>
-                  <br />
-                  <img class="img-fluid" src="assets/images/.jpg" alt="" />
-                </div>
-              </li>
-              <!--IM-->
-              <li>
-                <div class="exp-icon"></div>
-                <div class="exp-card">
-                  <h4>
-                    <strong>Penn State Competitive Sports</strong> |
-                    <em>Intramural Supervisor</em>
-                  </h4>
-                  <p>
-                    Led a team of 30 staff members to run a variety of
-                    intramural games. Also contributed to the launch of the
-                    LinkedIn Learning Program, which accumulated over 44,000
-                    hours of total watch time.
-                  </p>
-                  <br />
-                  <img class="img-fluid" src="assets/images/.jpg" alt="" />
-                </div>
-              </li>
-            </ul>
           </div>
         </div>
       </div>
