--- a/index.html
+++ b/index.html
@@ -95,6 +95,15 @@
             <li class="nav-item">
               <a
                 class="nav-link"
+                onclick="jump('hobbies')"
+                data-bs-toggle="collapse"
+                data-bs-target=".navbar-collapse.show"
+                >Hobbies</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
                 onclick="jump('resume')"
                 data-bs-toggle="collapse"
                 data-bs-target=".navbar-collapse.show"
@@ -234,6 +243,12 @@
                     The most significant included automating hundreds of insurance claim submissions 
                     with Selenium and generating individualized Excel workbooks using Xlwings.
                   </p>
+                  <br />
+                  <img
+                    class="img-fluid w-100"
+                    src="assets/images/ankang.jpg"
+                    alt=""
+                  />
                 </div>
               </li>
               <!--Siemens-->
@@ -573,13 +588,86 @@
       </div>
     </section>
 
-    <!--Resume Section-->
+    <!--Hobbies Section-->
     <section class="grey">
+      <div id="hobbies" class="anchors"></div>
+      <div class="container">
+        <div class="row text-center align-items-center">
+          <div class="col">
+            <h3 class="section-title">Hobbies</h3>
+            <div class="section-title-border"></div>
+          </div>
+        </div>
+        <!--Vlogging-->
+        <div class="row project text-left align-items-center">
+          <div class="col-xs-12 col-lg-6">
+            <div class="proj-title">Vlogging</div>
+            <p>
+              If a picture is worth a thousand words, then a video is worth millions.
+              I love capturing memorable moments or progression in one's journey.
+              Even though it can be awkward for some of my friends in the moment,
+              they always appreciate being able to revisit these time-capsuled moments.
+            </p>
+          </div>
+          <div class="col-xs-12 col-lg-6 proj-img">
+            <img class="img-fluid" src="assets/images/.jpg" alt="" />
+          </div>
+        </div>
+        <!--Calisthenics-->
+        <div class="row project text-left align-items-center">
+          <div class="col-xs-12 col-lg-6">
+            <div class="proj-title">Calisthenics</div>
+            <p>
+              Growing up I could not do a single pull-up. Since I started my
+              calisthenics journey, I achieved my first after 2.5 months!
+              I've always admired the mastery of bodyweight movements more than lifting heavy.
+              I will participate in the Murph Challenge on Memorial Day '25, stay tuned!
+            </p>
+          </div>
+          <div class="col-xs-12 col-lg-6 proj-img">
+            <img class="img-fluid" src="assets/images/.jpg" alt="" />
+          </div>
+        </div>
+        <!--Cooking-->
+        <div class="row project text-left align-items-center">
+          <div class="col-xs-12 col-lg-6">
+            <div class="proj-title">Cooking</div>
+            <p>
+              I love to eat—who doesn't? I enjoy learning new recipes,
+              cooking for others, and experimenting with wacky ideas.
+              It's so satisfying when my guests want a second plate.
+              I am currently working on a cookbook of all my favorite foods!
+            </p>
+          </div>
+          <div class="col-xs-12 col-lg-6 proj-img">
+            <img class="img-fluid" src="assets/images/.jpg" alt="" />
+          </div>
+        </div>
+        <!--Karaoke-->
+        <div class="row project text-left align-items-center">
+          <div class="col-xs-12 col-lg-6">
+            <div class="proj-title">Karaoke</div>
+            <p>
+              "If you can talk, you can sing"—that's what convinced me to give karaoke a try. 
+              Through karaoke, I've made friends from all different cultures and backgrounds. 
+              It encourages me to explore new songs across all genres, widening my perspective.
+              
+            </p>
+          </div>
+          <div class="col-xs-12 col-lg-6 proj-img">
+            <img class="img-fluid" src="assets/images/.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--Resume Section-->
+    <section class="white">
       <div id="resume" class="anchors"></div>
       <div class="container">
         <div class="row text-center align-items-center">
           <div class="col">
-            <h3 class="section-title">resume</h3>
+            <h3 class="section-title">Resume</h3>
             <div class="section-title-border"></div>
           </div>
         </div>
