--- a/privacy.html
+++ b/privacy.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Privacy Policy</title>
 
-    <link rel="icon" href="assets/images/favicon.ico?" />
+    <link rel="icon" href="assets/images/main/favicon.ico?" />
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
@@ -32,7 +32,7 @@
           <div class="col">
             <img
               class="img-fluid"
-              src="assets/images/appicon.png"
+              src="assets/images/main/appicon.png"
               alt=""
               width="200"
               height="200"
