--- a/index.html
+++ b/index.html
@@ -562,6 +562,7 @@
           <div class="col">
             <h3 class="section-title">Hobbies</h3>
             <div class="section-title-border"></div>
+            <br />
           </div>
         </div>
         <!--Vlogging-->
@@ -576,7 +577,7 @@
             </p>
           </div>
           <div class="col-xs-12 col-lg-6 proj-img">
-            <!-- <img class="img-fluid" src="assets/images/hobbies/.jpg" alt="" /> -->
+            <img class="img-fluid" src="assets/images/hobbies/vlogging.jpg" alt="" />
           </div>
         </div>
         <!--Calisthenics-->
@@ -591,7 +592,7 @@
             </p>
           </div>
           <div class="col-xs-12 col-lg-6 proj-img">
-            <!-- <img class="img-fluid" src="assets/images/hobbies/.jpg" alt="" /> -->
+            <img class="img-fluid" src="assets/images/hobbies/calisthenics.jpg" alt="" />
           </div>
         </div>
         <!--Cooking-->
@@ -606,7 +607,7 @@
             </p>
           </div>
           <div class="col-xs-12 col-lg-6 proj-img">
-            <!-- <img class="img-fluid" src="assets/images/hobbies/.jpg" alt="" /> -->
+            <img class="img-fluid" src="assets/images/hobbies/cooking.jpg" alt="" />
           </div>
         </div>
         <!--Karaoke-->
@@ -621,7 +622,7 @@
             </p>
           </div>
           <div class="col-xs-12 col-lg-6 proj-img">
-            <!-- <img class="img-fluid" src="assets/images/hobbies/.jpg" alt="" /> -->
+            <img class="img-fluid" src="assets/images/hobbies/karaoke.jpg" alt="" />
           </div>
         </div>
       </div>
