Updated video link for project

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
               onclick=" window.open('https://github.com/johnnyj2608/OrderUp2','_blank')">
               GitHub
             </button>
-            <button class="btn play-video" data-video-id="QUNo5Ob8d3M">
+            <button class="btn play-video" data-video-id="fQ1LRJo-lk4">
               Demo
             </button>
           </div>
