new fav icon for menu

--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
     <meta name="description" content="Software Engineer" />
     <title>Cookout John</title>
 
-    <link rel="icon" href="assets/images/main/favicon.ico?" />
+    <link rel="icon" href="assets/images/main/cookoutJohn.ico" />
     <link rel="stylesheet" href="assets/css/menu.css" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/minimal.css" />
@@ -38,6 +38,8 @@
     </script>
   </head>
   <body>
+
+    
 
     <!--Footer Section-->
     <footer>
