--- a/menu.html
+++ b/menu.html
@@ -16,10 +16,10 @@
     <title>Cookout John</title>
 
     <link rel="icon" href="assets/images/main/cookoutJohn.ico" />
-    <link rel="stylesheet" href="assets/css/menu.css" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/minimal.css" />
     <link rel="stylesheet" href="assets/css/animate.css" />
+    <link rel="stylesheet" href="assets/css/menu.css" />
     <script src="assets/js/pace.min.js"></script>
 
     <!-- Google tag (gtag.js) -->
@@ -39,7 +39,17 @@
   </head>
   <body>
 
+    <!--Navbar Section-->
+    <!-- Search Icon (Expands when clicked with cancel button) -->
+     <!-- Scrolling categories -->
     
+    <!--Food Section-->
+    <!-- 2 items per row -->
+    <!-- L: Image, R: Desc -->
+    <!-- When clicked, pop up info -->
+    <div class="container mt-5">
+      <div id="menu-container"></div>
+    </div>
 
     <!--Footer Section-->
     <footer>
