--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@
       <br />
     </footer>
 
+    <script src="assets/js/jump.js"></script>
     <script src="assets/js/app.js"></script>
     <script src="assets/js/loadData.js"></script>
     <script src="https://kit.fontawesome.com/a8eb5cb089.js" crossorigin="anonymous"></script>
